add auth, add login/register enpoints
