# internal/db/user/models.go
@@ -6,14 +6,16 @@ package user
 
 import (
 	"database/sql"
+	"time"
 )
 
 type User struct {
 	ID        int64
 	Name      string
 	Email     string
-	Bio       string
-	CreatedAt sql.NullTime
-	UpdatedAt sql.NullTime
+	Password  string
+	Bio       sql.NullString
+	CreatedAt time.Time
+	UpdatedAt time.Time
 	DeletedAt sql.NullTime
 }
