# internal/dto/auth/auth.go
@@ -1,0 +1,13 @@
+package dto
+
+type RegisterUserInput struct {
+	Name     string  `json:"name" validate:"required,min=2"`
+	Email    string  `json:"email" validate:"required,email"`
+	Password string  `json:"password" validate:"required,min=6"`
+	Bio      *string `json:"bio"`
+}
+
+type LoginInput struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
